--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,17 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-webflux -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+<!--			<version>2.6.6</version>-->
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
